Sua hinh anh va them link noi cac trang voi nhau

--- a/DaoBlissWebApp/Pages/Cart.cshtml
+++ b/DaoBlissWebApp/Pages/Cart.cshtml
@@ -51,7 +51,7 @@
                 <!-- Product Row 1 -->
                 <tr class="bg-[#fafafa] border-b border-gray-200">
                     <td class="py-4 px-4 flex items-center space-x-4">
-                        <img alt="Hũ cao tắm cô đặc" class="w-32 h-28 object-cover rounded-xl shadow-sm" src="~/img/product.png" />
+                        <img alt="Hũ cao tắm cô đặc" class="w-32 h-28 object-cover rounded-xl shadow-sm" src="~/img/concentrated-bath.jpg" />
                         <span class="font-medium">Cao tắm cô đặc</span>
                     </td>
                     <td class="py-4 px-4 text-center">150.000</td>
