--- a/DaoBlissWebApp/Pages/ProductDetail.cshtml
+++ b/DaoBlissWebApp/Pages/ProductDetail.cshtml
@@ -33,7 +33,7 @@
         <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-10 mb-20">
             <div class="flex flex-col md:flex-row md:space-x-16 items-center md:items-start">
                 <div class="w-full md:w-1/2 rounded-lg overflow-hidden">
-                    <img alt="Two DaoBliss products with green labels and bamboo wooden lids on white background" class="w-full h-auto rounded-lg object-cover" height="400" src="~/img/product.png" width="600" />
+                    <img alt="Two DaoBliss products with green labels and bamboo wooden lids on white background" class="w-full h-auto rounded-lg object-cover" height="400" src="~/img/concentrated-bath.jpg" width="600" />
                 </div>
                 <div class="w-full md:w-1/2 mt-8 md:mt-0">
                     <h1 class="font-playfair text-4xl text-black mb-3 leading-tight" style="line-height: 1.1">
