--- a/DaoBlissWebApp/Pages/ProductList.cshtml
+++ b/DaoBlissWebApp/Pages/ProductList.cshtml
@@ -91,7 +91,7 @@
                 <!-- Repeat 6 products -->
                 <form asp-page="productDetail" method="post">
                 <li class="bg-white rounded-md shadow-sm p-4 flex flex-col" role="listitem" tabindex="0">
-                    <img alt="Bộ sản phẩm DaoBliss gồm hai lọ thủy tinh có nắp tre màu vàng, nhãn xanh lá cây, đặt trên nền sáng" class="w-full h-full object-cover rounded-md mb-3" height="200" loading="lazy" src="~/img/product.png" width="300" />
+                    <img alt="Bộ sản phẩm DaoBliss gồm hai lọ thủy tinh có nắp tre màu vàng, nhãn xanh lá cây, đặt trên nền sáng" class="w-full h-full object-cover rounded-md mb-3" height="200" loading="lazy" src="~/img/concentrated-bath.jpg" width="300" />
                     <h2 aria-label="Tên sản phẩm" class="font-playfair text-lg text-[#1f3a2f] mb-1">
                         Cao tắm cô đặc
                     </h2>
