--- a/DaoBlissWebApp/Pages/HomePage.cshtml
+++ b/DaoBlissWebApp/Pages/HomePage.cshtml
@@ -109,17 +109,19 @@
         <h3 class="text-3xl font-serif mb-4" style="font-family: 'Playfair Display', serif;">Sản phẩm nổi bật</h3>
         <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
             <article>
-                <img alt="Two DaoBliss herbal jars with wooden lids on white background" class="w-full h-72 object-cover rounded" height="300" src="/img/product.png" width="400" />
+                <a href="/ProductDetail">
+                <img alt="Two DaoBliss herbal jars with wooden lids on white background" class="w-full h-72 object-cover rounded" height="300" src="/img/concentrated-bath.jpg" width="400" />
                 <h4 class="mt-2 text-lg font-medium" style="font-family: 'Roboto', sans-serif;">Cao tắm cô đặc</h4>
                 <p class="text-base text-[#4a4a4a] mt-1 font-sans font-light">Sản phẩm đặc trưng từ bài thuốc cổ truyền của người Dao Đỏ.</p>
+                </a>
             </article>
             <article>
-                <img alt="DaoBliss green box and small jar of herbal foot soak product on dark green background" class="w-full h-72 object-cover rounded" height="300" src="https://storage.googleapis.com/a1aa/image/cda7cdfb-1731-4ee5-2a6b-8e3aea8216b5.jpg" width="400" />
+                <img alt="DaoBliss green box and small jar of herbal foot soak product on dark green background" class="w-full h-72 object-cover rounded" height="300" src="/img/footbag.png" width="400" />
                 <h4 class="mt-2 text-lg font-medium" style="font-family: 'Roboto', sans-serif;">Bột ngâm chân thảo dược</h4>
                 <p class="text-base text-[#4a4a4a] mt-1 font-sans font-light">Nguyên liệu được lấy từ các cây thuốc quý vùng Tây Bắc.</p>
             </article>
             <article>
-                <img alt="Gift box with DaoBliss products and flowers in sunlight on lace tablecloth" class="w-full h-72 object-cover rounded" height="300" src="https://storage.googleapis.com/a1aa/image/036cfb3f-2466-48a1-60ed-c737984999fa.jpg" width="400" />
+                <img alt="Gift box with DaoBliss products and flowers in sunlight on lace tablecloth" class="w-full h-72 object-cover rounded" height="300" src="/img/largegift.png" width="400" />
                 <h4 class="mt-2 text-lg font-medium" style="font-family: 'Roboto', sans-serif;">Set quà “chữa lành”</h4>
                 <p class="text-base text-[#4a4a4a] mt-1 font-sans font-light">Bao gồm sản phẩm cùng quà tặng đi kèm, tiện lợi và lịch sự.</p>
             </article>
