Sua link va mot so hien thi khac

--- a/DaoBlissWebApp/Pages/AboutUs.cshtml
+++ b/DaoBlissWebApp/Pages/AboutUs.cshtml
@@ -119,19 +119,19 @@
 
         <div class="content-container">
             <div class="content !max-w-[40%]">
-                <h2 class="text-4xl font-serif mb-4 select-none">
+                <h2 class="text-4xl  mb-4 select-none">
                     Về chúng tôi
                 </h2>
-                <h3 class="text-[#7a7a7a] font-serif text-xl mb-4 select-none">
+                <h3 class="text-[#7a7a7a]  text-xl mb-4 select-none">
                     Giá trị cốt lõi
                 </h3>
-                <p class="text-sm leading-relaxed mb-8 font-serif">
+                <p class="text-sm leading-relaxed mb-8 ">
                     DaoBliss là doanh nghiệp chuyên sản xuất các sản phẩm chăm sóc sức khỏe tự nhiên, tập trung vào các thành phần hữu cơ, an toàn và không hóa chất. Không chỉ cung cấp sản phẩm, công ty còn hướng đến việc truyền tải và bảo tồn văn hóa bản địa - chia sẻ kiến thức và câu chuyện truyền thống của người Dao Đỏ. Mô hình này nắm bắt xu hướng toàn cầu đang phát triển, kết hợp kinh doanh với bảo tồn văn hóa và phát triển cộng đồng.
                 </p>
-                <h3 class="text-[#7a7a7a] font-serif text-xl mb-4 select-none">
+                <h3 class="text-[#7a7a7a]  text-xl mb-4 select-none">
                     Liên hệ với chúng tôi
                 </h3>
-                <ul class="list-disc list-inside text-sm font-serif space-y-6 mb-8">
+                <ul class="list-disc list-inside text-sm  space-y-6 mb-8">
                     <li>
                         Địa chỉ: Số 5, đường Cầu Giấy, Quan Hoa, Hà Nội
                     </li>
@@ -142,7 +142,7 @@
                         Số điện thoại: 0343564378
                     </li>
                 </ul>
-                <button class="bg-[#ba7a2f] rounded-full px-6 py-2 text-white font-serif text-lg hover:bg-[#a16e1f] transition select-none" type="button">
+                <button class="bg-[#ba7a2f] rounded-full px-6 py-2 text-white  text-lg hover:bg-[#a16e1f] transition select-none" type="button">
                     Tham gia cùng chúng tôi tại đây
                 </button>
             </div>
