--- a/DaoBlissWebApp/Pages/Shared/_Layout.cshtml
+++ b/DaoBlissWebApp/Pages/Shared/_Layout.cshtml
@@ -112,7 +112,9 @@
                     </button>
                     <button aria-label="User-Icon" class="bg-[#a06f1a] text-[#f9f5f0] rounded-full px-2 py-1 text-sm font-semibold flex gap-2 items-center justify-start">
                         <img alt="Hình ảnh con mèo" class="w-6 h-6 object-cover rounded-full self-center" src="https://storage.googleapis.com/a1aa/image/5fb5e5b5-0bc8-4c28-acd5-381c4abfd4f2.jpg" />
+                        <a asp-page="Login" style="">
                         <span>User</span>
+                        </a>
                     </button>
                 </div>
             </div>
@@ -126,7 +128,7 @@
                     <li><a href="/AboutUs" class="hover:text-[#ddb25a]">Về chúng tôi</a></li>
                     <li><a href="/ProductList" class="hover:text-[#ddb25a]">Mua sắm</a></li>
                     <li><a href="/Blogs" class="hover:text-[#ddb25a]">Blog</a></li>
-                    <li><a href="#" class="hover:text-[#ddb25a]">Liên hệ</a></li>
+                    @* <li><a href="#" class="hover:text-[#ddb25a]">Liên hệ</a></li> *@
                 </ul>
             </div>
         </nav>
